user authentication is completed

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.10.0",
     "internet-available": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "multer": "^1.4.2"
   }
 }
